feat: added project posting and filter for projects and users